@@ -1,23 +1,23 @@
 SET (${plugin}_sources ${unix}/${plugin}/sqUnixX11.c ${unix}/${plugin}/sqUnixMozilla.c)
 
 IF (NOT X11_FOUND)
-    DISABLE_PLUGIN ()
+  DISABLE_PLUGIN ()
 ELSE ()
-    SET (USE_X11 1)
-    IF (X11_Xext_FOUND)
-        SET (HAVE_LIB_XEXT 1)
-    ENDIF ()
-    CHECK_INCLUDE_FILE (X11/extensions/Xrender.h HAVE_X11_EXTENSIONS_XRENDER_H)
-    IF (HAVE_X11_EXTENSIONS_XRENDER_H)
-        CHECK_LIBRARY_EXISTS (Xrender XRenderQueryVersion ${X11_LIBRARY_DIR} HAVE_LIB_XRENDER)
-    ENDIF (HAVE_X11_EXTENSIONS_XRENDER_H)
-    IF (OPENGL_FOUND)
-        CHECK_INCLUDE_FILE (GL/gl.h HAVE_GL_GL_H)
-        CHECK_INCLUDE_FILE (GL/glx.h HAVE_GL_GLX_H)
-	IF (HAVE_GL_GL_H AND HAVE_GL_GLX_H)
-	    SET (USE_X11_GLX 1)
-	ENDIF (HAVE_GL_GL_H AND HAVE_GL_GLX_H)
-    ENDIF (OPENGL_FOUND)
+  SET (USE_X11 1)
+  IF (X11_Xext_FOUND)
+    SET (HAVE_LIB_XEXT 1)
+  ENDIF ()
+  CHECK_INCLUDE_FILE (X11/extensions/Xrender.h HAVE_X11_EXTENSIONS_XRENDER_H -I${X11_INCLUDE_DIR})
+  IF (HAVE_X11_EXTENSIONS_XRENDER_H)
+    CHECK_LIBRARY_EXISTS (Xrender XRenderQueryVersion ${X11_LIBRARY_DIR} HAVE_LIB_XRENDER)
+  ENDIF (HAVE_X11_EXTENSIONS_XRENDER_H)
+  IF (OPENGL_FOUND)
+    CHECK_INCLUDE_FILE (GL/gl.h HAVE_GL_GL_H -I${X11_INCLUDE_DIR})
+    CHECK_INCLUDE_FILE (GL/glx.h HAVE_GL_GLX_H -I${X11_INCLUDE_DIR})
+    IF (HAVE_GL_GL_H AND HAVE_GL_GLX_H)
+      SET (USE_X11_GLX 1)
+    ENDIF (HAVE_GL_GL_H AND HAVE_GL_GLX_H)
+  ENDIF (OPENGL_FOUND)
 ENDIF ()
 
 CONFIG_DEFINE (USE_X11)
